<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/BirthdayDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contextClickable="false"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.example.android.sunshine.app.DetailActivity.DetailFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/notifications"
                android:textColor="#3abbe9" />

            <ToggleButton
                android:id="@+id/notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="New ToggleButton" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/sendMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sendmessage"
                android:textColor="#3abbe9" />

            <ImageView
                android:id="@+id/message_send"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center_horizontal"
                android:src="@android:drawable/ic_menu_send"
                android:title="@string/send_message"

                android:backgroundTintMode="src_atop"
                android:contextClickable="false"
                android:focusableInTouchMode="false"
                android:cropToPadding="false"
                android:longClickable="false" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:textColor="#040000" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:textColor="#040000" />

        <EditText
            android:id="@+id/etDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:ems="10"
            android:inputType="datetime|date" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/phonenumber"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:textColor="#040000" />

        <EditText
            android:id="@+id/etPhoneNumb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/facebook"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:textColor="#040000" />

        <EditText
            android:id="@+id/etFacebookAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:inputType="text"
            android:ems="10"
            android:nextFocusDown="@+id/etAddMessage"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--android:weightSum="100">-->

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:gravity="center_horizontal"
            android:text="@string/addmessage"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:textColor="#040000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etAddMessage"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:ems="10"
            android:lines="10"
            android:inputType="text"
            android:imeOptions="actionDone"/>

    </LinearLayout>


    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save"
        android:textColor="#3abbe9" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right"></RelativeLayout>

    <!--<EditText-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:inputType="datetime|date"-->
    <!--android:ems="10"-->
    <!--android:id="@+id/editText4"-->
    <!--android:text="Date"-->
    <!--/>-->


    <!--<EditText-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:inputType="number"-->
    <!--android:ems="10"-->
    <!--android:id="@+id/editText3"-->
    <!--android:text="PhoneNumber"-->
    <!--/>-->

</LinearLayout>


    <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:paddingBottom = "16dp"--><!--android:paddingLeft="64dp"--><!--android:paddingRight="64dp"--><!--android:paddingTop="16dp"--><!--tools:context="app.com.example.alexnutu.birthdaysms.DetailActivityFragment"--><!--tools:showIn="@layout/activity_detail">-->

    <!--<TextView--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:id="@+id/detail_text" />--><!--</RelativeLayout>--><!-- code for SHARE
    <?xml version="1.0" encoding="utf-8"?>
-->

